Touching all the things.  Moved post-view-for-model back under app/views/post/, renamed post-content-view-for-model because the post content is really the only thing that changes.

--- a/app/views/home/templates/header.hbs
+++ b/app/views/home/templates/header.hbs
@@ -1,10 +1,5 @@
-<ul>
-	<li><a href="/" class="header-link">Home</a></li>
-	<li><a class="header-link" href="https://github.com/brunch/brunch/tree/stable/docs">Brunch docs</a></li>
-	<li><a class="header-link" href="https://github.com/brunch/brunch/issues">Brunch issues</a></li>
-	<li><a class="header-link" href="http://docs.chaplinjs.org">Chaplin docs</a></li>
-	<li><a class="header-link" href="https://github.com/chaplinjs/chaplin/issues">Chaplin issues</a></li>
-	<li><a class="header-link" href="https://github.com/paulmillr/ostio">Ost.io example app</a></li>
-	<li><a class="header-link" href="http://twitter.com/brunch">Twitter</a></li>
-	<li><a href="yay" class="header-link last-link">Yay!</a></li>
-</ul>
+{{! should probably use blogModel's attrs, title and description. (name is the URL-friendly name of the blog.)}}
+<h1>Tumblr Chaplin Dynamic Blog Base</h1>
+<h2>Also, descriptions!</h2>
+
+{{! nav links...? }}
