--- a/app/views/post/templates/post.hbs
+++ b/app/views/post/templates/post.hbs
@@ -1,8 +1,2 @@
-<section class="post-content">
-	{{#if title}}<h3 class="post-title">{{ title }}</h3>{{/if}}
-	{{#if caption}}<h4 class="post-caption">{{ caption }}</h4>{{/if}}
-</section>
-<section class="post-meta">
-	<section class="post-controls"></section>
-	<section class="post-notes">{{ note_count }} {{#is note_count 1}}note{{else}}notes{{/is}}</section>
-</section>
+<section class="post-content-container"></section>
+<section class="post-meta"></section>
