--- a/app/views/templates/site.hbs
+++ b/app/views/templates/site.hbs
@@ -1,6 +1,3 @@
-<div class="header-container" id="header-container"></div>
+<header id="header"></header>
 
-<div class="outer-page-container">
-  <div class="page-container" id="page-container">
-  </div>
-</div>
+<section id="blog-roll"></section>
