Stubbed in loading of PostCollection.  Theoretically all that's left is including some test data and seeing how it goes.

--- a/app/views/post/templates/post.hbs
+++ b/app/views/post/templates/post.hbs
@@ -1,2 +1,2 @@
 <section class="post-content-container"></section>
-<section class="post-meta"></section>
+<section class="post-meta-container"></section>
