--- a/app/views/post/post-content/templates/link-post-content.hbs
+++ b/app/views/post/post-content/templates/link-post-content.hbs
@@ -5,7 +5,7 @@
 
 <section class="link-post-link-anchor">
 	<div>
-		<a href="{{ url }}" title="{{#if title }}{{ title }}{{else}}{{ url }}" class="link-post-link">{{#if title }}{{ title }}{{else}}{{ url }}</a>
+		<a href="{{ url }}" title="{{#if title }}{{ title }}{{else}}{{ url }}{{/if}}" class="link-post-link">{{#if title }}{{ title }}{{else}}{{ url }}{{/if}}</a>
 	</div>
 	{{#if author }}
 	<div class="link-post-link-author">
