--- a/app/views/post/post-content/templates/photo-post-content.hbs
+++ b/app/views/post/post-content/templates/photo-post-content.hbs
@@ -1,14 +1,18 @@
 <div class="photo-post-content">
 	{{! Note: To actually handle photosets (which can have layouts) will require more complex work.  For now, just spamming photos here.}}
 	{{#each photos}}
-	<figure style="width: {{ blogroll_size.width }}px; height: {{ blogroll_size.height }}px; background: gray;">
+	<figure>
 		<img src="{{ blogroll_size.url }}" alt="{{ caption }}" width="{{ blogroll_size.width }}" height="{{ blogroll_size.height }}">
 
-		{{#if caption }}
+		{{#if caption}}
 		<figcaption>
 			{{{ caption }}}
 		</figcaption>
 		{{/if}}
 	</figure>
 	{{/each}}
+
+	{{#if caption}}
+	<div class="photo-post-caption">{{{ caption }}}</div>
+	{{/if}}
 </div>
