--- a/app/views/post/post-content/templates/video-post-content.hbs
+++ b/app/views/post/post-content/templates/video-post-content.hbs
@@ -1,11 +1,11 @@
 {{! thumbnail_url is also available if you want videos only loading on permalinks. }}
 
 <section class="video-post-player">
-	{{ player_blogroll_size.embed_code }}
+	{{{ player_blogroll_size.embed_code }}}
 </section>
 
 {{#if caption}}
 <section class="video-post-caption">
-	{{caption}}
+	{{{caption}}}
 </section>
 {{/if}}
