--- a/app/views/home/styles/header.styl
+++ b/app/views/home/styles/header.styl
@@ -1,32 +1,18 @@
 @import 'nib'
+@import 'app/styles/_definitions'
 
-.header
-  width: 551px
-  margin: 0 auto
-  padding: 5px
-  font-size: 24px
-  background-color: #fff
-  border-bottom: 2px solid #427684
-  font-weight: 300
-  font-size: 1.25rem
-  line-height: 1.2
+header
+  // background color-light-wash
+  padding 1px 0
+  text-align center
+  margin-bottom base-margin
+  
+  h1
+    color color-splash
+    font-size 3em
+    font-weight normal
+    letter-spacing 1px
 
-  &-link
-    display: inline-block
-    text-decoration: none
-    color: #3f894a
-    padding: 4px 15px
-
-    &.last-link
-      padding-left: 9px;
-
-    &:visited
-      color: #3f894a
-
-    &:hover
-      color: #27552e
-      border-color: #27552e
-  ul
-    margin: 5px 0
-  li
-    display: inline
+  h2
+    color color-text-secondary
+    font-size 1em
