--- a/app/views/post/templates/post.hbs
+++ b/app/views/post/templates/post.hbs
@@ -1,2 +1,2 @@
-<section class="post-content-container"></section>
-<section class="post-meta-container"></section>
+<section class="post-content-container container"></section>
+<section class="post-meta-container container"></section>
