Added stub pagination els, and stubbed in permalink stuff.

--- a/app/views/post-collection/templates/post-collection.hbs
+++ b/app/views/post-collection/templates/post-collection.hbs
@@ -1,1 +1,5 @@
+<div class="post-collection-pagination post-collection-page-previous"></div>
+
 <div class="post-collection-list"></div>
+
+<div class="post-collection-pagination post-collection-page-next"></div>
